--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,17 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5137"
+      },
+      "Https": {
+        "Url": "https://localhost:7137"
+      }
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=ArtClasses;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
