Updated few components and backend logic to verify login

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -9,14 +9,14 @@
       }
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ArtClasses;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=True"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+    "ConnectionStrings": {
+      "DefaultConnection": "Host=localhost;Database=art_classes;Username=art_admin;Password=your_password"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
